# SIH

./: README.md  app.py  knowledge_base.txt  llm.py  pdf_loader.py  pyproject.toml  requirements.txt  retriever.py  translator.py
