[project]
name = "sih"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "dotenv>=0.9.9",
    "elevenlabs>=2.15.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.2",
    "indic-transliteration>=2.3.75",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langdetect>=1.0.9",
    "pydub>=0.25.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.0",
    "twilio>=9.8.0",
    "uvicorn>=0.35.0",
]
